- через 4 часа работы перестал отображаться график веса.