@@ -3,11 +3,9 @@ package ru.issp.weight_control_system;
 
 import javafx.collections.ObservableList;
 import jssc.SerialPortException;
-import ru.issp.weight_control_system.Model.Model;
 import ru.issp.weight_control_system.Model.ModelProperty;
 import ru.issp.weight_control_system.ProdCons.ExcelFileWriter;
 import ru.issp.weight_control_system.ProdCons.FromByteToWeight;
-import ru.issp.weight_control_system.ProdCons.ReadFromFile;
 import ru.issp.weight_control_system.data.DataAll;
 import ru.issp.weight_control_system.data.DataParam;
 import ru.issp.weight_control_system.utils.PowerSetter;
@@ -29,11 +27,12 @@ static  DataParam dataParam = new DataParam();
 static int modelTact = 3;
 static int readTact = 1;
 
+
     public static void transferData(ObservableList<ModelProperty> sourceList, ObservableList<Double> realMassList, ObservableList<Double> modelRadiusList) throws FileNotFoundException {
 
 //инициализируем получение данных
         BlockingQueue<byte[]> q = new LinkedBlockingQueue<>();
-        ReadFromFile p = new ReadFromFile(q);//Читаем из файла
+        // ReadFromFile p = new ReadFromFile(q);//Читаем из файла
         //ReadFromCom p = new ReadFromCom(q);//Читаем из COM-порта
         TestData testData = new TestData();
         FromByteToWeight c1 = new FromByteToWeight(q);
@@ -42,11 +41,11 @@ static int readTact = 1;
         DataAll dataAll = new DataAll();
 //Запускаем получение данных
         System.out.println("Запускаем потоки producer/consumer ");
-        new Thread(p).start();
+        //new Thread(p).start();
         new Thread(c1).start();
         new Thread(testData).start();
 //запускаем расчеты по расписанию
-        long startGlobal = System.currentTimeMillis();
+
         AtomicLong startLocal = new AtomicLong(System.currentTimeMillis());
         AtomicInteger globalCount= new AtomicInteger();//используется для запуска startModelCalculations раз в n тактов
         scheduledExecutorService = Executors.newSingleThreadScheduledExecutor();
@@ -88,13 +87,13 @@ static int readTact = 1;
                 e.printStackTrace();
             }
 
-//текущая масса(средняя за прошлый интервал)
+//Текущая масса(средняя за прошлый интервал)
 // current mass добавляем в один лист для отрисовки на графике, т.к. работает с самого начала программы и не изменяется до ее завершения.
             realMassList.add(currentMass);
 
             //расчет радиуса
             if (realMassList.size()>=2) {
-            modelRadiusList.add(calcRealR((realMassList.get(realMassList.size() - 1) - realMassList.get(realMassList.size() - 2)))/readTact);
+            modelRadiusList.add(calcRealR((realMassList.get(realMassList.size() - 1) - realMassList.get(realMassList.size() - 2))/readTact));
             }
 
             //TODO добавить расчет уровня расплава
@@ -132,7 +131,7 @@ static int readTact = 1;
     private static void  setPower(double dP){
         if (IsPowerControlStarted.get()){
 
-            //Может быть стоит сделать константу POWER double, а кастовать в инт только при отправке в генератор
+            //Может быть стоит сделать константу POWER double, а cast в инт только при отправке в генератор
             //TODO Поправить в соответствии с коэффициентами перекоса
             if (dP>dataParam.getdNPmax()){
                 try {
@@ -157,7 +156,7 @@ static int readTact = 1;
         }
     }
 
-    private static void modelCalculations1(AtomicInteger globalCount,AtomicLong startLocal,ObservableList<ModelProperty> sourceList, ObservableList<Double> realMassList, DataAll dataAll){
+    private static void modelCalculationsTest(AtomicInteger globalCount,AtomicLong startLocal,ObservableList<ModelProperty> sourceList, ObservableList<Double> realMassList, DataAll dataAll){
         //При каждом запуске расчетов проверяем пусты ли массивы и инициализируем первым значением текущей массы
         //При каждом начале расчетов инициализируем массивы
         if (IsModelCalculationsStarted.get()&&sourceList.size()==0&&globalCount.get()%modelTact==0){
@@ -182,109 +181,68 @@ static int readTact = 1;
         //startModelCalculations
 
         if (globalCount.get()%modelTact==0&&IsModelCalculationsStarted.get()){
-            System.out.println("currentMass "+realMassList.get(realMassList.size()-1));
-            System.out.println(dataAll);
 
-            String time = createDateFormatForTableView().format(System.currentTimeMillis() - startLocal.get());
+/*            System.out.println("Проверка предыдущих значений до{"+
+                    "prevMassDeviation"+dataAll.getMassDeviation().getLast()+"\n"+
+                    "prevMassFirstDerivativeDeviation"+dataAll.getMassFirstDerivativeDeviation().getLast()+"\n"+
+                    "prevMassSecondDerivativeDeviation"+dataAll.getMassSecondDerivativeDeviation().getLast()+"}");*/
+
+                    String localTime = createDateFormatForTableView().format(System.currentTimeMillis() - startLocal.get());
+            int dt = modelTact*readTact;
+            //берем последний добавленный элемент в realMassList, текущую массу
             double realMass = realMassList.get(realMassList.size()-1);
             double modelMass = dataAll.getModelMass().getLast();
-            double modelMassFirstDerivative = dataAll.getModelMassFirstDerivative().getLast();
-            double massDeviation = dataAll.getMassDeviation().getLast();
-            double massFirstDerivativeDeviation = dataAll.getMassFirstDerivativeDeviation().getLast();
-            double massSecondDerivativeDeviation = dataAll.getMassSecondDerivativeDeviation().getLast();
-            double length = 0;
-            double meltLevelHeight = 0;
-            double radius = 0;
-
-            Model model = new Model(readTact*modelTact, dataParam, dataAll, realMassList.get(realMassList.size()-2));
-
-            System.out.println(model);
-
-            double integralPartOfThePower = dataParam.getKi() * (model.massDeviation -massDeviation);
-            double proportionalPartOfThePower = dataParam.getKp() * (model.massFirstDerivativeDeviation - massFirstDerivativeDeviation);
-            double differentialPartOfThePower = dataParam.getKd() * (model.massSecondDerivativeDeviation - massSecondDerivativeDeviation);
-
-            double powerDeviation = integralPartOfThePower+proportionalPartOfThePower+differentialPartOfThePower;
-
-
-            sourceList.add(0,new ModelProperty(time,//+
-                    realMass,//+
-                    modelMass,//+
-                    modelMassFirstDerivative,//+
-                    massDeviation,//+
-                    massFirstDerivativeDeviation,//+
-                    massSecondDerivativeDeviation,//+
-                    integralPartOfThePower,//+
-                    proportionalPartOfThePower,//+
-                    differentialPartOfThePower,//+
-                    powerDeviation,//+
-                    PowerSetter.getPOWER(),//+
-                    dataParam.getV_upper(),//+
-                    length,
-                    meltLevelHeight,
-                    radius)//+
-            );
-
-            //если нажата кнопка начать управление мощностью
-            setPower(powerDeviation);
-            //обнуляем счетчик циклов расчета
-            globalCount.set(0);
-        }
-    }
-    private static void modelCalculations(AtomicInteger globalCount,AtomicLong startLocal,ObservableList<ModelProperty> sourceList, ObservableList<Double> realMassList, DataAll dataAll){
-        //При каждом запуске расчетов проверяем пусты ли массивы и инициализируем первым значением текущей массы
-        //При каждом начале расчетов инициализируем массивы
-        if (IsModelCalculationsStarted.get()&&sourceList.size()==0&&globalCount.get()%modelTact==0){
-            System.out.println("Сработал if инициализации");
-            System.out.println(sourceList.size());
-            System.out.println(dataAll);
-            dataAll.initModelMass(realMassList.get(realMassList.size()-1));
-            System.out.println(dataAll);
-            startLocal.set(System.currentTimeMillis());
-        }
-        //При каждом окончании расчетов очищаем массивы
-
-        if (!IsModelCalculationsStarted.get()&&sourceList.size()!=0){
-            System.out.println("Сработал if очистки");
-            System.out.println(sourceList.size());
-            System.out.println(dataAll);
-            sourceList.clear();
-            dataAll.clear();
-            System.out.println(sourceList.size());
-            System.out.println(dataAll);
-        }
-        //startModelCalculations
-
-        if (globalCount.get()%modelTact==0&&IsModelCalculationsStarted.get()){
-            System.out.println();
-            System.out.println("Начало");
-            System.out.println("currentMass "+realMassList.get(realMassList.size()-1));
-            System.out.println(dataAll.lastToString());
+            System.out.println("realMass = "+realMass);
+            System.out.println("modelMass = "+modelMass);
+            double modelMassFirstDerivative = getModelMassFirstDerivative();
 
 
 
-            String localTime = createDateFormatForTableView().format(System.currentTimeMillis() - startLocal.get());
-            double realMass = realMassList.get(realMassList.size()-1);
-            double modelMass = dataAll.getModelMass().getLast();
-            double modelMassFirstDerivative = dataAll.getModelMassFirstDerivative().getLast();
-            double massDeviation = dataAll.getMassDeviation().getLast();
+            double massDeviation = realMass - modelMass;
+            double massFirstDerivativeDeviation = (massDeviation -dataAll.getMassDeviation().getLast())/dt;
+
+            dataAll.getMassDeviation().add(massDeviation);
+            double massSecondDerivativeDeviation = (massFirstDerivativeDeviation -dataAll.getMassFirstDerivativeDeviation().getLast())/dt;
+            dataAll.getMassFirstDerivativeDeviation().add(massFirstDerivativeDeviation);
+            dataAll.getMassSecondDerivativeDeviation().add(massSecondDerivativeDeviation);
+
+
+
             double prevMassDeviation = 0d;
             double prevMassFirstDerivativeDeviation = 0d;
             double prevMassSecondDerivativeDeviation = 0d;
 
             if ((dataAll.getMassDeviation().size()-2)>=0){
                 prevMassDeviation = dataAll.getMassDeviation().get(dataAll.getMassDeviation().size()-2);
-                prevMassFirstDerivativeDeviation = dataAll.getMassDeviation().get(dataAll.getMassFirstDerivativeDeviation().size()-2);
-                prevMassSecondDerivativeDeviation = dataAll.getMassDeviation().get(dataAll.getMassSecondDerivativeDeviation().size()-2);
+                prevMassFirstDerivativeDeviation = dataAll.getMassFirstDerivativeDeviation().get(dataAll.getMassFirstDerivativeDeviation().size()-2);
+                prevMassSecondDerivativeDeviation = dataAll.getMassSecondDerivativeDeviation().get(dataAll.getMassSecondDerivativeDeviation().size()-2);
+/*
+                System.out.println("Проверка предыдущих значений после{"+
+                        "prevMassDeviation"+dataAll.getMassDeviation().getLast()+"\n"+
+                        "prevMassFirstDerivativeDeviation"+dataAll.getMassFirstDerivativeDeviation().getLast()+"\n"+
+                        "prevMassSecondDerivativeDeviation"+dataAll.getMassSecondDerivativeDeviation().getLast()+"}");
+*/
+
             }
 
-            double massFirstDerivativeDeviation = dataAll.getMassFirstDerivativeDeviation().getLast();
-            double massSecondDerivativeDeviation = dataAll.getMassSecondDerivativeDeviation().getLast();
+
+
             double length = 0;
             double meltLevelHeight = 0;
-            double radius = calcRealR((realMassList.get(realMassList.size() - 1) - realMassList.get(realMassList.size() - 2)))/readTact;
+            double realRadius = calcRealR((realMassList.get(realMassList.size() - 1) - realMassList.get(realMassList.size() - 2))/readTact);
+            double modelRadius = 0;
+            if((dataAll.getModelMass().size()-2)>=0){
+                modelRadius = calcRealR((dataAll.getModelMass().getLast()-dataAll.getModelMass().get(dataAll.getModelMass().size()-2))/modelTact);
 
-            Model model = new Model(readTact*modelTact, dataParam, dataAll, realMassList.get(realMassList.size()-1));
+ /*           System.out.println("Mass rate{" +"\n"+
+                    "real Mass rate=" + ((realMassList.get(realMassList.size() - 1) - realMassList.get(realMassList.size() - 2))/readTact) +"\n"+
+                    "model Mass rate=" + ((dataAll.getModelMass().getLast()-dataAll.getModelMass().get(dataAll.getModelMass().size()-2))/modelTact));
+        */}
+           /* System.out.println("Radius{" +"\n"+
+                    "Radius=" + dataParam.getR() +"\n"+
+                    "realRadius=" + realRadius +"\n"+
+                    "modelRadius=" + modelRadius+"}"+"\n");*/
+
 
             double integralPartOfThePower = dataParam.getKi() * (massDeviation-prevMassDeviation);
             double proportionalPartOfThePower = dataParam.getKp() * (massFirstDerivativeDeviation - prevMassFirstDerivativeDeviation);
@@ -308,11 +266,11 @@ static int readTact = 1;
                     dataParam.getV_upper(),//+
                     length,
                     meltLevelHeight,
-                    radius)//+
+                    realRadius)//+
             );
 
-            LinkedList linkedList = new LinkedList<>();
-            linkedList.add(localTime);
+            LinkedList<Double> linkedList = new LinkedList<>();
+
             linkedList.add(realMass);
             linkedList.add(modelMass);
             linkedList.add(modelMassFirstDerivative);
@@ -330,14 +288,17 @@ static int readTact = 1;
             linkedList.add(dataParam.getV_upper());
             linkedList.add(length);
             linkedList.add(meltLevelHeight);
-            linkedList.add(radius);
+            linkedList.add(modelRadius);
+            linkedList.add(realRadius);
             linkedList.add(dataParam.getR());
-
             try {
-                ExcelFileWriter.writeToExcelFile(linkedList);
+                ExcelFileWriter.writeToExcelFile(localTime,linkedList);
             } catch (FileNotFoundException e) {
                 e.printStackTrace();
             }
+
+            modelMass = modelMass + modelMassFirstDerivative * dt;
+            dataAll.getModelMass().add(modelMass);
 
             //если нажата кнопка начать управление мощностью
             setPower(powerDeviation);
@@ -346,5 +307,126 @@ static int readTact = 1;
 
             System.out.println(sourceList.get(0));
         }
+    }
+    private static void modelCalculations(AtomicInteger globalCount,AtomicLong startLocal,ObservableList<ModelProperty> sourceList, ObservableList<Double> realMassList, DataAll dataAll){
+        //При каждом запуске расчетов проверяем пусты ли массивы и инициализируем первым значением текущей массы
+        //При каждом начале расчетов инициализируем массивы
+        if (IsModelCalculationsStarted.get()&&sourceList.size()==0&&globalCount.get()%modelTact==0){
+            dataAll.initModelMass(realMassList.get(realMassList.size()-1));
+            startLocal.set(System.currentTimeMillis());
+        }
+        //При каждом окончании расчетов очищаем массивы
+
+        if (!IsModelCalculationsStarted.get()&&sourceList.size()!=0){
+            sourceList.clear();
+            dataAll.clear();
+        }
+        //startModelCalculations
+
+        if (globalCount.get()%modelTact==0&&IsModelCalculationsStarted.get()){
+
+            String localTime = createDateFormatForTableView().format(System.currentTimeMillis() - startLocal.get());
+            int dt = modelTact*readTact;
+            //берем последний добавленный элемент в realMassList, текущую массу
+            double realMass = realMassList.get(realMassList.size()-1);
+            double modelMass = dataAll.getModelMass().getLast();
+            double modelMassFirstDerivative = getModelMassFirstDerivative();
+
+            double massDeviation = realMass - modelMass;
+            double massFirstDerivativeDeviation = (massDeviation -dataAll.getMassDeviation().getLast())/dt;
+
+            dataAll.getMassDeviation().add(massDeviation);
+            double massSecondDerivativeDeviation = (massFirstDerivativeDeviation -dataAll.getMassFirstDerivativeDeviation().getLast())/dt;
+            dataAll.getMassFirstDerivativeDeviation().add(massFirstDerivativeDeviation);
+            dataAll.getMassSecondDerivativeDeviation().add(massSecondDerivativeDeviation);
+
+            double prevMassDeviation = 0d;
+            double prevMassFirstDerivativeDeviation = 0d;
+            double prevMassSecondDerivativeDeviation = 0d;
+
+            if ((dataAll.getMassDeviation().size()-2)>=0){
+                prevMassDeviation = dataAll.getMassDeviation().get(dataAll.getMassDeviation().size()-2);
+                prevMassFirstDerivativeDeviation = dataAll.getMassFirstDerivativeDeviation().get(dataAll.getMassFirstDerivativeDeviation().size()-2);
+                prevMassSecondDerivativeDeviation = dataAll.getMassSecondDerivativeDeviation().get(dataAll.getMassSecondDerivativeDeviation().size()-2);
+            }
+
+            double length = 0;
+            double meltLevelHeight = 0;
+            double realRadius = calcRealR((realMassList.get(realMassList.size() - 1) - realMassList.get(realMassList.size() - 2))/readTact);
+            double modelRadius = 0;
+            if((dataAll.getModelMass().size()-2)>=0){
+                modelRadius = calcRealR((dataAll.getModelMass().getLast()-dataAll.getModelMass().get(dataAll.getModelMass().size()-2))/modelTact);
+}
+
+            double integralPartOfThePower = dataParam.getKi() * (massDeviation-prevMassDeviation);
+            double proportionalPartOfThePower = dataParam.getKp() * (massFirstDerivativeDeviation - prevMassFirstDerivativeDeviation);
+            double differentialPartOfThePower = dataParam.getKd() * (massSecondDerivativeDeviation - prevMassSecondDerivativeDeviation);
+
+            double powerDeviation = integralPartOfThePower+proportionalPartOfThePower+differentialPartOfThePower;
+
+            sourceList.add(0,new ModelProperty(localTime,//+
+                    realMass,//+
+                    modelMass,//+
+                    modelMassFirstDerivative,//+
+                    massDeviation,//+
+                    massFirstDerivativeDeviation,//+
+                    massSecondDerivativeDeviation,//+
+                    integralPartOfThePower,//+
+                    proportionalPartOfThePower,//+
+                    differentialPartOfThePower,//+
+                    powerDeviation,//+
+                    PowerSetter.getPOWER(),//+
+                    dataParam.getV_upper(),//+
+                    length,
+                    meltLevelHeight,
+                    realRadius)//+
+            );
+
+            LinkedList<Double> linkedList = new LinkedList<>();
+
+            linkedList.add(realMass);
+            linkedList.add(modelMass);
+            linkedList.add(modelMassFirstDerivative);
+            linkedList.add(massDeviation);
+            linkedList.add(massDeviation-prevMassDeviation);
+            linkedList.add(massFirstDerivativeDeviation);
+            linkedList.add(massFirstDerivativeDeviation - prevMassFirstDerivativeDeviation);
+            linkedList.add(massSecondDerivativeDeviation);
+            linkedList.add(massSecondDerivativeDeviation - prevMassSecondDerivativeDeviation);
+            linkedList.add(integralPartOfThePower);
+            linkedList.add(proportionalPartOfThePower);
+            linkedList.add(differentialPartOfThePower);
+            linkedList.add(powerDeviation);
+            linkedList.add((double) PowerSetter.getPOWER());
+            linkedList.add(dataParam.getV_upper());
+            linkedList.add(length);
+            linkedList.add(meltLevelHeight);
+            linkedList.add(modelRadius);
+            linkedList.add(realRadius);
+            linkedList.add(dataParam.getR());
+            try {
+                ExcelFileWriter.writeToExcelFile(localTime,linkedList);
+            } catch (FileNotFoundException e) {
+                e.printStackTrace();
+            }
+
+            modelMass = modelMass + modelMassFirstDerivative * dt;
+            dataAll.getModelMass().add(modelMass);
+            //если нажата кнопка начать управление мощностью
+            setPower(powerDeviation);
+            //обнуляем счетчик циклов расчета
+            globalCount.set(0);
+        }
+    }
+
+    static Double getModelMassFirstDerivative() {
+        //Всегда одинакова до смены параметров?
+        double denominator;
+        double numerator1;
+        double numerator2;
+        denominator = Math.pow(dataParam.getR_cruc(), 2) - dataParam.getS_die() / Math.PI;
+        numerator1 = dataParam.getRos() * Math.pow(dataParam.getR(), 2) * (Math.PI * Math.pow(dataParam.getR_cruc(), 2) - (dataParam.getS_die() - dataParam.getS_die_cr())) * dataParam.getV_upper();
+        numerator2 = Math.PI * dataParam.getRol() * dataParam.getS_die_cr() * Math.pow(dataParam.getR_cruc(), 2) * dataParam.getV_lower();
+        return (numerator1 - numerator2) / denominator;
     }
 }
